Testing team responsive - corrected grid-item size and grid-gap

--- a/public/sass/_team.scss
+++ b/public/sass/_team.scss
@@ -9,7 +9,7 @@
   .team-grid {
     display: grid;
     grid-template-rows: auto;
-    gap: 30px;
+    // gap: 30px;
     justify-items: center;
     box-sizing: border-box;
     position: relative;
@@ -46,16 +46,18 @@
 
 @media screen and (max-width: 409px) {
   .team-grid {
-    grid-template-columns: repeat(1, 200px);
+    grid-template-columns: repeat(2, 120px);
+    gap: 10px;
   }
   .member-container {
-    width: 200px;
+    width: 120px;
   }
 }
 
 @media screen and (min-width: 410px) and (max-width: 750px) {
   .team-grid {
     grid-template-columns: repeat(2, 190px);
+    gap: 20px;
   }
   .member-container {
     width: 190px;
@@ -65,6 +67,7 @@
 @media screen and (min-width: 751px) and (max-width: 1000px) {
   .team-grid {
     grid-template-columns: repeat(3, 190px);
+    gap: 30px;
   }
   .member-container {
     width: 180px;
@@ -74,6 +77,7 @@
 @media screen and (min-width: 1001px) and (max-width: 1499px) {
   .team-grid {
     grid-template-columns: repeat(3, 250px);
+    gap: 30px;
   }
   .member-container {
     width: 250px;
@@ -83,6 +87,7 @@
 @media screen and (min-width: 1500px) and (max-width: 1899px) {
   .team-grid {
     grid-template-columns: repeat(4, 300px);
+    gap: 30px;
   }
   .member-container {
     width: 300px;
@@ -92,6 +97,7 @@
 @media screen and (min-width: 1900px) {
   .team-grid {
     grid-template-columns: repeat(4, 300px);
+    gap: 30px;
   }
   .member-container {
     width: 300px;
